syntax = "proto3";

package inventory;
option go_package = "github.com/bookstore/contracts/gen/go/inventory;inventorypb";

// -----------------------------
// Servicio gRPC expuesto por Inventory
// -----------------------------
service InventoryService {
  // Consultar un Ã­tem por ID
  rpc GetItem (GetItemRequest) returns (GetItemResponse);

  // Verificar disponibilidad de stock
  rpc CheckAvailability (CheckAvailabilityRequest) returns (CheckAvailabilityResponse);

  // Reservar stock (cuando una orden se crea)
  rpc ReserveStock (ReserveStockRequest) returns (ReserveStockResponse);

  // Liberar stock (cuando una orden se cancela)
  rpc ReleaseStock (ReleaseStockRequest) returns (ReleaseStockResponse);

  // Actualizar stock manualmente (por ajustes de inventario)
  rpc UpdateStock (UpdateStockRequest) returns (UpdateStockResponse);
}

// -----------------------------
// Mensajes
// -----------------------------

message Item {
  string item_id = 1;
  string name = 2;
  string category = 3;
  int32 quantity = 4;
  double price = 5;
}

// -------- Get Item --------
message GetItemRequest {
  string item_id = 1;
}

message GetItemResponse {
  Item item = 1;
}

// -------- Check Availability --------
message CheckAvailabilityRequest {
  string item_id = 1;
  int32 requested_quantity = 2;
}

message CheckAvailabilityResponse {
  bool available = 1;
  int32 available_quantity = 2;
  string message = 3;
}

// -------- Reserve Stock --------
message ReserveStockRequest {
  string order_id = 1;
  repeated ReservedItem items = 2;
}

message ReservedItem {
  string item_id = 1;
  int32 quantity = 2;
}

message ReserveStockResponse {
  bool success = 1;
  string message = 2;
  repeated FailedItem failed_items = 3;
}

message FailedItem {
  string item_id = 1;
  string reason = 2;
}

// -------- Release Stock --------
message ReleaseStockRequest {
  string order_id = 1;
  repeated ReservedItem items = 2;
}

message ReleaseStockResponse {
  bool success = 1;
  string message = 2;
}

// -------- Update Stock --------
message UpdateStockRequest {
  string item_id = 1;
  int32 delta = 2; // Positivo o negativo
}

message UpdateStockResponse {
  bool success = 1;
  string message = 2;
  int32 new_quantity = 3;
}
